@@ -1,3 +1,4 @@
+ - Add function Form::set_some_coefficients()
  - Remove Boost.MPI dependency
  - Change GenericMatrix::compresss to return a new matrix (7be3a29)
  - Add function GenericTensor::empty()
